--- a/src/main/resources/templates/layouts/Master/state.html
+++ b/src/main/resources/templates/layouts/Master/state.html
@@ -121,7 +121,10 @@
 										<input type="reset" value="Reset" class="btn btn-danger" />
 									</div>
 
-									<a th:href="@{/state/list}">view state list</a>
+									<div style="width: parent; text-align-last: right; margin: 8px">
+										<a th:href="@{/state/list}">view state list</a>
+									</div>
+
 
 								</form>
 							</div>
