--- a/src/main/resources/templates/layouts/editview/editDepartment.html
+++ b/src/main/resources/templates/layouts/editview/editDepartment.html
@@ -68,7 +68,7 @@
 											</div>
 											<!-- /.box-header -->
 											<!-- form start -->
-											<form role="form" th:action="@{/department/}" method="POST"
+											<form role="form" th:action="@{/department/update/}" method="POST"
 												th:object="${department}">
 												<div class="box-body">
 
