--- a/src/main/resources/templates/layouts/editview/editDesignation.html
+++ b/src/main/resources/templates/layouts/editview/editDesignation.html
@@ -83,40 +83,15 @@
 															placeholder="designation name" th:field="*{desigName}">
 													</div>
 
-													<div class="form-group col-md-12">
-														<label for="inputEmail4">Pay Scale Code</label> <input
-															type="text" class="form-control"
-															placeholder="pay scale code" th:field="*{payScaleCode}">
-													</div>
-													<div class="form-group col-md-6">
-														<label for="inputPassword4">Basic Slab 1</label> <input
-															type="number" class="form-control"
-															placeholder="basic slab 1" th:field="*{basicSlab1}">
-													</div>
+												
 
-													<div class="form-group col-md-6">
-														<label for="inputEmail4">Basic Slab 2</label> <input
-															type="number" class="form-control"
-															placeholder="basic slab 2" th:field="*{basicSlab2}">
-													</div>
+												
 
-													<div class="form-group col-md-12">
-														<label for="inputEmail4">Basic Slab 3</label> <input
-															type="number" class="form-control"
-															placeholder="basic slab 3" th:field="*{basicSlab3}">
-													</div>
+												
 
-													<div class="form-group col-md-6">
-														<label for="inputEmail4">Increment1</label> <input
-															type="number" class="form-control"
-															placeholder="increement 1" th:field="*{increment1}">
-													</div>
+												
 
-													<div class="form-group col-md-6">
-														<label for="inputEmail4">Increment2</label> <input
-															type="number" class="form-control"
-															placeholder="increement 2" th:field="*{increment2}">
-													</div>
+													
 
 													<label class="checkbox-inline"> <input type="radio"
 														value="Y" name="active" checked style="margin-left: 5px">Active
@@ -140,10 +115,10 @@
 
 										</div>
 										<!-- /.box -->
-										<div
+								<!-- 		<div
 											style="width: parent; text-align-last: right; margin: 8px">
 											<a th:href="@{/designation/list}">View All Designation</a>
-										</div>
+										</div> -->
 									</div>
 
 
