--- a/src/main/resources/templates/layouts/Master/city.html
+++ b/src/main/resources/templates/layouts/Master/city.html
@@ -113,11 +113,11 @@
 															required>
 													</div>
 
-													<div class="form-group col-md-12">
+													<!-- <div class="form-group col-md-12">
 														<label>Region Code</label> <input type="text"
 															class="form-control" placeholder="region code"
 															th:field="*{regionCode}">
-													</div>
+													</div> -->
 
 													<div class="form-group col-md-12">
 														<label>State</label> <label style="color: red">*</label> <select
@@ -130,16 +130,17 @@
 														</select>
 													</div>
 
-													<div class="form-group col-md-6">
+													<div class="form-group col-md-12">
 														<label for="inputEmail4">District</label> <input
 															type="text" class="form-control" placeholder="district"
 															th:field="*{district}">
 													</div>
-													<div class="form-group col-md-6">
+												
+												<!-- 	<div class="form-group col-md-6">
 														<label for="inputEmail4">City Type</label> <input
 															type="text" class="form-control" placeholder="city type"
 															th:field="*{cityType}">
-													</div>
+													</div> -->
 
 													<label class="checkbox-inline"> <input type="radio"
 														value="Y" name="active" checked style="margin-left: 5px">Active
