--- a/src/main/resources/templates/layouts/Master/designation.html
+++ b/src/main/resources/templates/layouts/Master/designation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
 <meta charset="utf-8">
@@ -115,47 +115,22 @@
 															required>
 													</div>
 
-													<div class="form-group col-md-12">
-														<label for="inputEmail4">Pay Scale Code</label> <input
-															type="text" class="form-control"
-															placeholder="Pay Scale Code" th:field="*{payScaleCode}">
-													</div>
-													<div class="form-group col-md-6">
-														<label for="inputPassword4">Basic Slab 1</label> <input
-															type="number" class="form-control"
-															placeholder="Basic Slab 1" th:field="*{basicSlab1}">
-													</div>
 
-													<div class="form-group col-md-6">
-														<label for="inputEmail4">Basic Slab 2</label> <input
-															type="number" class="form-control"
-															placeholder="Basic Slab 2" th:field="*{basicSlab2}">
-													</div>
 
-													<div class="form-group col-md-12">
-														<label for="inputEmail4">Basic Slab 3</label> <input
-															type="number" class="form-control"
-															placeholder="Basic Slab 3" th:field="*{basicSlab3}">
-													</div>
 
-													<div class="form-group col-md-6">
-														<label for="inputEmail4">Increment1</label> <input
-															type="number" class="form-control"
-															placeholder="Increement 1" th:field="*{increment1}">
-													</div>
 
-													<div class="form-group col-md-6">
-														<label for="inputEmail4">Increment2</label> <input
-															type="number" class="form-control"
-															placeholder="Increement 2" th:field="*{increment2}">
-													</div>
 
-<label class="checkbox-inline"> <input type="radio"
-														value="Y" name="active" checked style="margin-left: 5px" >Active <input
-														type="radio" value="N" name="active"  style="margin-left: 5px">In-Active
+
+
+
+
+													<label class="checkbox-inline"> <input type="radio"
+														value="Y" name="active" checked style="margin-left: 5px">Active
+														<input type="radio" value="N" name="active"
+														style="margin-left: 5px">In-Active
 													</label>
-													
-													
+
+
 												</div>
 												<!-- /.box-body -->
 
@@ -193,31 +168,28 @@
 	<div th:replace="fragments/footer :: footer">...</div>
 
 	<script>
+		$(document).ready(function() {
+			var message = document.getElementById('mess').value
+			if (message != null && message !== "") {
 
-				$(document).ready(function () {
-					var message = document.getElementById('mess').value
-					if (message != null && message !== "") {
-
-						swal(message, "", "success", {
-							button: "OK",
-							hideClass: {
-								popup: 'animate__animated animate__fadeOutUp'
-							},
-						});
-					} else {
-						console.log("ajax request : " + message);
-					}
-
+				swal(message, "", "success", {
+					button : "OK",
+					hideClass : {
+						popup : 'animate__animated animate__fadeOutUp'
+					},
 				});
-			</script>
+			} else {
+				console.log("ajax request : " + message);
+			}
+
+		});
+	</script>
 
 	<script>
-
-				$("#designationForm").validate({
-					ignoreTitle: true
-				});
-
-			</script>
+		$("#designationForm").validate({
+			ignoreTitle : true
+		});
+	</script>
 	<!--   <section class="content">
         
         </section>-->
