--- a/src/main/resources/templates/layouts/Master/itemMaster.html
+++ b/src/main/resources/templates/layouts/Master/itemMaster.html
@@ -308,16 +308,18 @@
 																<div class="form-group col-md-2">
 																	<label for="inputEmail4">Store Code</label> <input
 																		type="email" class="form-control form-control-sm"
-																		placeholder="Store Code" title="store code">
+																		id="storeCode"
+																		placeholder="Store Code" title="store code" readonly>
 																</div>
 																<div class="form-group col-md-4">
 																	<label class="form-label">Store Name</label> <label
 																		style="color: red">*</label> <select
+																		id="storeName"
 																		class="form-control" title="This field is required"
-																		th:field="*{store}" required>
+																		th:field="*{store}" required onchange="selectStore()">
 																		<option value="">Select</option>
 																		<option th:each="store :  ${listStore}"
-																			th:text="${store.storeCode}"
+																			th:text="${store.description}"
 																			th:value=" ${store.storeCode}"></option>
 																	</select>
 																</div>
@@ -692,6 +694,11 @@
 				$("#itemMasterForm").validate({
 					ignoreTitle: true
 				});
+				
+				function selectStore(){
+					var storeCode = document.getElementById("storeName").value;
+					document.getElementById("storeCode").value = storeCode;
+				}
 
 			</script>
 
