--- a/src/main/resources/templates/layouts/Master/partyMaster.html
+++ b/src/main/resources/templates/layouts/Master/partyMaster.html
@@ -146,13 +146,13 @@
 															<div class="form-group col-md-4">
 																<label for="inputPassword4">Representative Code</label>
 																<input type="text" class="form-control"
-																	id="inputPassword4" placeholder="Representative Code"
-																	title="representative code" >
+																	id="representCode" placeholder="Representative Code"
+																	title="representative code"  readonly>
 															</div>
 															<div class="form-group col-md-4">
 																<label for="inputPassword4">Representative Name</label>
-																<select class="form-control" id="departmentDropdown"
-																	title="representative name"  th:field="*{repCode}" required>
+																<select class="form-control" id="representName"
+																	title="representative name"  th:field="*{repCode}" onchange="selectRepresent()" required>
 																	<option value="">Select</option>
 																	<option th:each="employee :  ${listEmployee}"
 																		th:text="${employee.empName}"
@@ -422,8 +422,8 @@
 														<div class="box-body">
 
 															<label>Registered</label> <label class="checkbox-inline">
-																<input type="radio" value="Y" name="inlineRadioOptions">Yes
-																<input type="radio" value="N" name="inlineRadioOptions"
+																<input type="radio" value="Y" name="gstRegistered">Yes
+																<input type="radio" value="N" name="gstRegistered"
 																style="margin-left: 20px">No
 															</label>
 															<div class="form-group row">
@@ -633,7 +633,7 @@
 																		<fieldset>
 																			<select class="form-control form-control-sm select"
 																				id="departmentDropdown" title="city"
-																				name="listPartyBilling[0].billingCityCode" required>
+																				name="listPartyBilling[0].billingCityCode">
 																				<option value="">Select</option>
 																				<option th:each="city :  ${listCity}"
 																					th:text="${city.cityName}"
@@ -645,7 +645,7 @@
 																		<fieldset>
 																			<select class="form-control form-control-sm select"
 																				id="departmentDropdown" title="state code"
-																				name="listPartyBilling[0].billingStateCode" required>
+																				name="listPartyBilling[0].billingStateCode" >
 																				<option value="">Select</option>
 																				<option th:each="state :  ${listState}"
 																					th:text="${state.stateName}"
@@ -664,7 +664,7 @@
 																		<fieldset>
 																			<select class="form-control form-control-sm select"
 																				title="Country Name"
-																				name="listPartyBilling[0].billingCountryCode" required>
+																				name="listPartyBilling[0].billingCountryCode" >
 																				<option value="">Select</option>
 																				<option th:each="country :  ${listCountry}"
 																					th:text="${country.countryName}"
@@ -756,7 +756,7 @@
 																			<fieldset>
 																				<select class="form-control form-control-sm select"
 																					id="departmentDropdown" title="city"
-																					name="listPartyConsignee[0].city" required>
+																					name="listPartyConsignee[0].city" >
 																					<option value="">Select</option>
 																					<option th:each="city :  ${listCity}"
 																						th:text="${city.cityName}"
@@ -768,7 +768,7 @@
 																			<fieldset>
 																				<select class="form-control form-control-sm select"
 																					id="departmentDropdown" title="country"
-																					name="listPartyConsignee[0].country" required>
+																					name="listPartyConsignee[0].country" >
 																					<option value="">Select</option>
 																					<option th:each="country :  ${listCountry}"
 																						th:text="${country.countryName}"
@@ -938,6 +938,12 @@
 				lblPANCard.style.display = "block";
 				return false;
 			}
+		}
+		
+		
+		function selectRepresent(){
+			var representName = document.getElementById("representName").value;
+			document.getElementById("representCode").value = representName
 		}
 	</script>
 
