--- a/src/main/resources/templates/layouts/editview/editCity.html
+++ b/src/main/resources/templates/layouts/editview/editCity.html
@@ -84,11 +84,11 @@
 															th:field="*{cityName}">
 													</div>
 
-													<div class="form-group col-md-12">
+												<!-- 	<div class="form-group col-md-12">
 														<label>Region Code</label> <input type="text"
 															class="form-control" placeholder="region code"
 															th:field="*{regionCode}">
-													</div>
+													</div> -->
 
 													<div class="form-group col-md-12">
 														<label>State</label> <label style="color: red">*</label> <select
@@ -101,16 +101,16 @@
 														</select>
 													</div>
 
-													<div class="form-group col-md-6">
+													<div class="form-group col-md-12">
 														<label for="inputEmail4">District</label> <input
 															type="text" class="form-control" placeholder="district"
 															th:field="*{district}">
 													</div>
-													<div class="form-group col-md-6">
+												<!-- 	<div class="form-group col-md-6">
 														<label for="inputEmail4">City Type</label> <input
 															type="text" class="form-control" placeholder="city type"
 															th:field="*{cityType}">
-													</div>
+													</div> -->
 
 													<label class="checkbox-inline"> <input type="radio"
 														value="Y" name="active" checked style="margin-left: 5px">Active
@@ -133,10 +133,7 @@
 
 										</div>
 										<!-- /.box -->
-										<div
-											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/city/list}">View All City</a>
-										</div>
+								
 									</div>
 
 
