--- a/src/main/resources/templates/layouts/editview/editItemOpening.html
+++ b/src/main/resources/templates/layouts/editview/editItemOpening.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head >
+<head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>EBS</title>
@@ -44,7 +44,7 @@
 
 </head>
 
-<body class="hold-transition skin-blue sidebar-mini" onload="getItemDetail()">
+<body class="hold-transition skin-blue sidebar-mini">
 	<div class="wrapper">
 		<div>
 			<div th:replace="fragments/header :: header">...</div>
@@ -98,11 +98,18 @@
 												th:object="${itemOpening}">
 												<div class="box-body">
 
+
 													<div class="form-group col-md-6">
-														<label for="inputEmail4">Item Code</label><span
+														<label for="inputEmail4">Item Code</label> <input
+															type="text" class="form-control" id="itemCode"
+															placeholder="Item Code" title="item code" readonly>
+													</div>
+
+													<div class="form-group col-md-6">
+														<label for="inputEmail4">Item Description</label><span
 															style="color: red">*</span> <select class="form-control"
-															id="" th:field="*{itemCode}" onchange='getItemDetail()'
-															title="item code" required>
+															id="itemDescription" th:field="*{itemCode}"
+															onchange='getItemDetail()' title="item code" required>
 															<option value="">Select</option>
 															<option th:each="item :  ${listItem}"
 																th:text="${item.description}"
@@ -110,37 +117,32 @@
 
 														</select>
 													</div>
-													<div class="form-group col-md-6">
-														<label for="inputEmail4">Item Description</label> <input
-															type="text" class="form-control" id="itemDescription"
-															placeholder="Description" title="item description"
-															required>
-													</div>
+
 
 													<div class="form-group col-md-6">
 														<label class="form-label">Item Type</label> <input
 															type="text" class="form-control" placeholder="Item Type"
-															title="item type" id="itemType">
+															title="item type" id="itemType" readonly>
 													</div>
 
 
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Category</label> <input
 															type="text" class="form-control" placeholder="Category"
-															title="category" id="category">
+															title="category" id="category" readonly>
 													</div>
 
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Item UOM</label> <input
 															type="text" class="form-control" placeholder="Item UOM"
-															title="item uom" id="itemUom">
+															title="item uom" id="itemUom" readonly>
 													</div>
 
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Opening Date</label><span
 															style="color: red">*</span> <input type="date"
 															class="form-control" th:field="*{openingDate}"
-															title="opening date">
+															title="opening date" id="openingDate">
 													</div>
 
 
@@ -171,10 +173,12 @@
 												</div>
 												<!-- /.box-body -->
 
-												<div class="box-footer" style="margin: 10px">
+											<div class="box-footer" style="margin: 10px">
 													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="button" value="Go back!" class="btn btn-danger"onclick="history.back()">
+													<input type="button" value="Go back!"
+														class="btn btn-danger" onclick="history.back()">
 												</div>
+
 
 
 											</form>
@@ -182,10 +186,10 @@
 
 										</div>
 										<!-- /.box -->
-										<div
+										<!-- <div
 											style="width: parent; text-align-last: right; margin: 8px">
 											<a th:href="@{/itemopening/list}">View All Item-Opening</a>
-										</div>
+										</div> -->
 									</div>
 
 
@@ -203,8 +207,19 @@
 
 	<div th:replace="fragments/footer :: footer">...</div>
 
+
 	<script>
-	
+		$(document).ready(function() {
+
+			document.getElementById('openingDate').valueAsDate = new Date();
+
+		});
+	</script>
+
+
+
+
+	<script>
 		// for two decimal number 
 		$(document).ready(function() {
 			$(".floatNumberField").change(function() {
@@ -228,29 +243,35 @@
 			}
 
 		});
-		
-		
-		// ajax for selected item code and populate record against item code 
-		
-		function getItemDetail(){
-			
-			var itemCode = document.getElementById("itemCode").value;
-			$.ajax({
-				type: "GET",
-				url: "/itemopening/itemdetail/" + itemCode,
 
-				success: function(data) {
+		// ajax for selected item code and populate record against item code 
+
+		function getItemDetail() {
+
+			var itemCode = document.getElementById("itemDescription").value;
+
+			document.getElementById("itemCode").value = itemCode;
+			$.ajax({
+				type : "GET",
+				url : "/itemopening/itemdetail/" + itemCode,
+
+				success : function(data) {
 					//$("#resultarea").text(data);
 					console.log("response data : " + data);
-					$("#itemDescription").val(data.description);
+					//$("#itemDescription").val(data.description);
 					$("#itemType").val(data.itemType)
 					$("#category").val(data.category.categCode)
 					$("#itemUom").val(data.uom.uomCode)
-				}, error: function() {
+				},
+				error : function() {
 					console.log("Error");
 				}
 			});
-			
+
+		}
+
+		window.onload = function() {
+			getItemDetail();
 			
 		}
 	</script>
